--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
     "repository": "https://github.com/pekkos/pekkos.com",
     "license": "UNLICENSED",
     "devDependencies": {
-        "@11ty/eleventy": "^0.8.0",
-        "@frctl/fractal": "^1.1.7",
         "gulp": "^3.9.1",
         "gulp-copy": "^4.0.1",
         "gulp-shell": "^0.6.5",
         "run-sequence": "^2.2.1"
     },
-    "dependencies": {}
+    "dependencies": {
+        "@11ty/eleventy": "^0.8.0",
+        "@11ty/eleventy-plugin-syntaxhighlight": "^2.0.3",
+        "@frctl/fractal": "^1.1.7"
+    }
 }
